--- a/src/index.css
+++ b/src/index.css
@@ -11,13 +11,15 @@
 .list-posts-item {
   position: relative;
   display: block;
-  padding: 0.75rem 1.25rem;
+  padding: 0.1rem 1.25rem;
   margin-bottom: 10px;
   background-color: #fff;
   border: 1px solid rgba(0, 0, 0, 0.125);
   border-radius: 10px;
 }
-
+.comments{
+  padding: 33px;
+}
 a{
   text-decoration: none;
   color: silver;
@@ -44,4 +46,7 @@ a{
 .fade-leave-active{
   opacity: 0;
   transition: .2s ease-out all;
+}
+.title{
+  color: dodgerblue;
 }
